--- a/manage_customer/customer.html
+++ b/manage_customer/customer.html
@@ -75,7 +75,7 @@
                 <tr>
                     <th scope="col">Customer ID</th>
                     <th scope="col">Customer Name</th>
-                    <th scope="col">Customer Adrress</th>
+                    <th scope="col">Customer Address</th>
                     <th scope="col">Customer Number</th>
                 </tr>
                 </thead>
