--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="nav-link" href="manage_customer/customer.html">CUSTOMER</a>
                 <a class="nav-link" href="manage_item/item.html">ITEM</a>
                 <a class="nav-link" href="manage_orders/order.html">ORDER</a>
-                <a class="nav-link" href="manage_orders/order_detail.html">ORDER DETAIL</a>
+                <a class="nav-link" href="manage_orders/order_detail.html">ORDER_DETAIL</a>
                <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a>-->
             </div>
             <button type="button" class="btn btn-outline-secondary">SignUp</button>
@@ -38,7 +38,7 @@
                    <img src="Assests/images/icons8-customer-64.png" class="card-img-top" alt="customers">
                    <div class="card-body">
                        <h5 class="card-title">Total Customers</h5>
-                       <p class="card-text">_</p>
+                      <!-- <p class="card-text">_</p>-->
                    </div>
                </div>
            </div>
@@ -47,7 +47,7 @@
                    <img src="Assests/images/icons8-item-48.png" class="card-img-top" alt="items">
                    <div class="card-body">
                        <h5 class="card-title">Total Items</h5>
-                       <p class="card-text">_</p>
+                      <!-- <p class="card-text">_</p>-->
                    </div>
                </div>
            </div>
@@ -56,7 +56,7 @@
                    <img src="Assests/images/icons8-order-48.png" class="card-img-top" alt="orders">
                    <div class="card-body">
                        <h5 class="card-title">Total Orders</h5>
-                       <p class="card-text">___</p>
+                      <!-- <p class="card-text">___</p>-->
                    </div>
                </div>
            </div>
